[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/theme/font_body.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/atlas_controls.png" type="Texture" id=2]
[ext_resource path="res://assets/theme/color_theme_spectrum.png" type="Texture" id=3]
[ext_resource path="res://common/action_hint.tscn" type="PackedScene" id=4]
[ext_resource path="res://game/gui/tutorial_gui.gd" type="Script" id=5]

[sub_resource type="StyleBoxEmpty" id=346]

[sub_resource type="AtlasTexture" id=347]
atlas = ExtResource( 2 )
region = Rect2( 112, 216, 24, 24 )
margin = Rect2( 0, 3, 0, 3 )

[node name="TutorialGui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1280, 720 )
script = ExtResource( 5 )
__meta__ = {
"_editor_description_": ""
}

[node name="Checkpoints" type="Control" parent="."]
margin_left = 392.0
margin_top = 104.0
margin_right = 888.0
margin_bottom = 104.0
grow_horizontal = 2

[node name="TravelingContent" type="Control" parent="Checkpoints"]
visible = false
anchor_right = 1.0
margin_bottom = 96.0

[node name="Background" type="ColorRect" parent="Checkpoints/TravelingContent"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0784314, 0.0784314, 0.0784314, 0.784314 )

[node name="Title" type="Label" parent="Checkpoints/TravelingContent"]
anchor_right = 1.0
margin_top = 14.0
margin_bottom = 44.0
rect_min_size = Vector2( 0, 30 )
theme_type_variation = "Lerimama_lite"
custom_colors/font_color = Color( 1, 1, 1, 0.470588 )
custom_styles/normal = SubResource( 346 )
text = "Traveling"
align = 1
uppercase = true
__meta__ = {
"_editor_description_": ""
}

[node name="Line" type="Label" parent="Checkpoints/TravelingContent"]
anchor_right = 1.0
margin_left = 8.0
margin_top = 48.0
margin_right = -8.0
margin_bottom = 66.0
custom_fonts/font = ExtResource( 1 )
text = "Use ARROW, WASD keys or DIRECTIONAL PAD to move."
align = 1
autowrap = true

[node name="BurstingContent" type="Control" parent="Checkpoints"]
visible = false
anchor_right = 1.0
margin_bottom = 192.0

[node name="Background" type="ColorRect" parent="Checkpoints/BurstingContent"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 1.0
color = Color( 0.0784314, 0.0784314, 0.0784314, 0.784314 )

[node name="Title" type="Label" parent="Checkpoints/BurstingContent"]
anchor_right = 1.0
margin_top = 22.0
margin_bottom = 52.0
rect_min_size = Vector2( 0, 30 )
theme_type_variation = "Lerimama_lite"
custom_colors/font_color = Color( 1, 1, 1, 0.470588 )
custom_styles/normal = SubResource( 346 )
text = "Collecting colors"
align = 1
uppercase = true
__meta__ = {
"_editor_description_": ""
}

[node name="Line" type="Label" parent="Checkpoints/BurstingContent"]
anchor_right = 1.0
margin_left = 16.0
margin_top = 56.0
margin_right = -16.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 1 )
text = "Burst into a stray pixel to destroy it and take its color."
align = 1
autowrap = true

[node name="Line2" type="Label" parent="Checkpoints/BurstingContent"]
anchor_right = 1.0
margin_left = 40.0
margin_top = 88.0
margin_right = -40.0
margin_bottom = 136.0
custom_fonts/font = ExtResource( 1 )
text = "Press and hold the BURST KEY and use a DIRECTION KEY to add burst power. Release ..."
align = 1
autowrap = true

[node name="Line3" type="Label" parent="Checkpoints/BurstingContent"]
anchor_right = 1.0
margin_left = 24.0
margin_top = 144.0
margin_right = -24.0
margin_bottom = 162.0
custom_fonts/font = ExtResource( 1 )
text = "To stop when bursting, press the BURST KEY again."
align = 1
autowrap = true

[node name="SkillingContent" type="Control" parent="Checkpoints"]
visible = false
anchor_right = 1.0
margin_bottom = 160.0

[node name="Background" type="ColorRect" parent="Checkpoints/SkillingContent"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 1.0
color = Color( 0.0784314, 0.0784314, 0.0784314, 0.784314 )

[node name="Title" type="Label" parent="Checkpoints/SkillingContent"]
anchor_right = 1.0
margin_top = 22.0
margin_bottom = 52.0
rect_min_size = Vector2( 0, 30 )
theme_type_variation = "Lerimama_lite"
custom_colors/font_color = Color( 1, 1, 1, 0.470588 )
custom_styles/normal = SubResource( 346 )
text = "Using skills"
align = 1
uppercase = true
__meta__ = {
"_editor_description_": ""
}

[node name="Line" type="Label" parent="Checkpoints/SkillingContent"]
anchor_right = 1.0
margin_left = 16.0
margin_top = 56.0
margin_right = -16.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 1 )
text = "When touching a stray pixel, move towards it to connect.
Push or pull to move it around."
align = 1
autowrap = true

[node name="Line2" type="Label" parent="Checkpoints/SkillingContent"]
anchor_right = 1.0
margin_left = 8.0
margin_top = 112.0
margin_right = -16.0
margin_bottom = 136.0
custom_fonts/font = ExtResource( 1 )
text = "White can't be moved, but you can teleport over it."
align = 1
autowrap = true

[node name="FinContent" type="Control" parent="Checkpoints"]
visible = false
anchor_right = 1.0
margin_bottom = 160.0

[node name="Background" type="ColorRect" parent="Checkpoints/FinContent"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 1.0
color = Color( 0.0784314, 0.0784314, 0.0784314, 0.784314 )

[node name="Title" type="Label" parent="Checkpoints/FinContent"]
anchor_right = 1.0
margin_top = 22.0
margin_bottom = 52.0
rect_min_size = Vector2( 0, 30 )
theme_type_variation = "Lerimama_lite"
custom_colors/font_color = Color( 1, 1, 1, 0.470588 )
custom_styles/normal = SubResource( 346 )
text = "Last tutorial step"
align = 1
uppercase = true
__meta__ = {
"_editor_description_": ""
}

[node name="Line" type="Label" parent="Checkpoints/FinContent"]
anchor_right = 1.0
margin_left = 48.0
margin_top = 56.0
margin_right = -48.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 1 )
text = "You've learned some basic moves. Get more tips and tricks on the game's \"About\" screen."
align = 1
autowrap = true

[node name="Line2" type="Label" parent="Checkpoints/FinContent"]
anchor_right = 1.0
margin_left = 16.0
margin_top = 112.0
margin_right = -24.0
margin_bottom = 130.0
custom_fonts/font = ExtResource( 1 )
text = "Now, unleash spectacular bursts and enjoy the game!"
align = 1
autowrap = true

[node name="HudGuide" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Shadow" type="Control" parent="HudGuide"]
modulate = Color( 0, 0, 0, 0.313726 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = 1.0
margin_bottom = 1.0
mouse_filter = 2

[node name="PlayerLabel" type="Label" parent="HudGuide/Shadow"]
self_modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
margin_left = 32.0
margin_top = 45.0
margin_right = 220.0
margin_bottom = 63.0
custom_fonts/font = ExtResource( 1 )
text = "Life, energy and Score"
uppercase = true
__meta__ = {
"_edit_group_": true
}

[node name="Line2D" type="Line2D" parent="HudGuide/Shadow/PlayerLabel"]
modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
position = Vector2( -14, 6 )
points = PoolVector2Array( 38, -19, 38, -7 )
width = 0.5
default_color = Color( 1, 1, 1, 1 )
antialiased = true

[node name="TimeLabel" type="Label" parent="HudGuide/Shadow"]
self_modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
margin_left = 556.0
margin_top = 45.0
margin_right = 637.0
margin_bottom = 63.0
custom_fonts/font = ExtResource( 1 )
text = "Game time"
uppercase = true
__meta__ = {
"_edit_group_": true
}

[node name="Line2D3" type="Line2D" parent="HudGuide/Shadow/TimeLabel"]
modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
position = Vector2( -39, 6 )
points = PoolVector2Array( 91, -19, 91, -7 )
width = 0.5
default_color = Color( 1, 1, 1, 1 )
antialiased = true

[node name="MusicLabel" type="Label" parent="HudGuide/Shadow"]
self_modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
margin_left = 667.0
margin_top = 45.0
margin_right = 937.0
margin_bottom = 63.0
custom_fonts/font = ExtResource( 1 )
text = "Clickable music player"
uppercase = true
__meta__ = {
"_edit_group_": true
}

[node name="Line2D2" type="Line2D" parent="HudGuide/Shadow/MusicLabel"]
modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
position = Vector2( -34, 9 )
points = PoolVector2Array( 79, -22, 79, -10 )
width = 0.5
default_color = Color( 1, 1, 1, 1 )
antialiased = true

[node name="HighscoreLabel" type="Label" parent="HudGuide/Shadow"]
self_modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
margin_left = 1055.0
margin_top = 45.0
margin_right = 1250.0
margin_bottom = 63.0
grow_horizontal = 0
custom_fonts/font = ExtResource( 1 )
text = "Games highscore"
align = 2
uppercase = true
__meta__ = {
"_edit_group_": true
}

[node name="Line2D" type="Line2D" parent="HudGuide/Shadow/HighscoreLabel"]
modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
position = Vector2( 46, 1 )
points = PoolVector2Array( 107, -14, 107, -2 )
width = 0.5
default_color = Color( 1, 1, 1, 1 )
antialiased = true

[node name="GameLabel" type="Label" parent="HudGuide/Shadow"]
self_modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
margin_left = 31.0
margin_top = 654.0
margin_right = 157.0
margin_bottom = 672.0
custom_fonts/font = ExtResource( 1 )
text = "Game and level"
uppercase = true
__meta__ = {
"_edit_group_": true
}

[node name="Line2D2" type="Line2D" parent="HudGuide/Shadow/GameLabel"]
modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
position = Vector2( 0, 56 )
points = PoolVector2Array( 57, -22, 57, -34 )
width = 0.5
default_color = Color( 1, 1, 1, 1 )
antialiased = true

[node name="SpectrumLabel" type="Label" parent="HudGuide/Shadow"]
self_modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
margin_left = 427.5
margin_top = 654.0
margin_right = 852.5
margin_bottom = 672.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 1 )
text = "Indicator of picked and available colors"
align = 1
uppercase = true
__meta__ = {
"_edit_group_": true
}

[node name="Line2D" type="Line2D" parent="HudGuide/Shadow/SpectrumLabel"]
modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
position = Vector2( 136, 59 )
points = PoolVector2Array( 76.5, -37, 76.5, -25 )
width = 0.5
default_color = Color( 1, 1, 1, 1 )
antialiased = true

[node name="AstrayLabel" type="Label" parent="HudGuide/Shadow"]
self_modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
margin_left = 1012.0
margin_top = 654.0
margin_right = 1249.0
margin_bottom = 672.0
grow_horizontal = 0
custom_fonts/font = ExtResource( 1 )
text = "Pixels still astray"
align = 2
uppercase = true
__meta__ = {
"_edit_group_": true
}

[node name="Line2D2" type="Line2D" parent="HudGuide/Shadow/AstrayLabel"]
modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
position = Vector2( 109, 58 )
points = PoolVector2Array( 104, -24, 104, -36 )
width = 0.5
default_color = Color( 1, 1, 1, 1 )
antialiased = true

[node name="PlayerLabel" type="Label" parent="HudGuide"]
self_modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
margin_left = 32.0
margin_top = 45.0
margin_right = 220.0
margin_bottom = 63.0
custom_fonts/font = ExtResource( 1 )
text = "Life, energy and Score"
uppercase = true
__meta__ = {
"_edit_group_": true
}

[node name="Line2D" type="Line2D" parent="HudGuide/PlayerLabel"]
modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
position = Vector2( -14, 6 )
points = PoolVector2Array( 38, -19, 38, -7 )
width = 0.5
default_color = Color( 1, 1, 1, 1 )
antialiased = true

[node name="TimeLabel" type="Label" parent="HudGuide"]
self_modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
margin_left = 556.0
margin_top = 45.0
margin_right = 637.0
margin_bottom = 63.0
custom_fonts/font = ExtResource( 1 )
text = "Game time"
uppercase = true
__meta__ = {
"_edit_group_": true
}

[node name="Line2D3" type="Line2D" parent="HudGuide/TimeLabel"]
modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
position = Vector2( -39, 6 )
points = PoolVector2Array( 91, -19, 91, -7 )
width = 0.5
default_color = Color( 1, 1, 1, 1 )
antialiased = true

[node name="MusicLabel" type="Label" parent="HudGuide"]
self_modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
margin_left = 667.0
margin_top = 45.0
margin_right = 937.0
margin_bottom = 63.0
custom_fonts/font = ExtResource( 1 )
text = "Clickable music player"
uppercase = true
__meta__ = {
"_edit_group_": true
}

[node name="Line2D2" type="Line2D" parent="HudGuide/MusicLabel"]
modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
position = Vector2( -34, 9 )
points = PoolVector2Array( 79, -22, 79, -10 )
width = 0.5
default_color = Color( 1, 1, 1, 1 )
antialiased = true

[node name="HighscoreLabel" type="Label" parent="HudGuide"]
self_modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
margin_left = 1055.0
margin_top = 45.0
margin_right = 1250.0
margin_bottom = 63.0
grow_horizontal = 0
custom_fonts/font = ExtResource( 1 )
text = "Games top score"
align = 2
uppercase = true
__meta__ = {
"_edit_group_": true
}

[node name="Line2D" type="Line2D" parent="HudGuide/HighscoreLabel"]
modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
position = Vector2( 46, 1 )
points = PoolVector2Array( 107, -14, 107, -2 )
width = 0.5
default_color = Color( 1, 1, 1, 1 )
antialiased = true

[node name="GameLabel" type="Label" parent="HudGuide"]
self_modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
margin_left = 31.0
margin_top = 654.0
margin_right = 157.0
margin_bottom = 672.0
custom_fonts/font = ExtResource( 1 )
text = "Game and level"
uppercase = true
__meta__ = {
"_edit_group_": true
}

[node name="Line2D2" type="Line2D" parent="HudGuide/GameLabel"]
modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
position = Vector2( 0, 56 )
points = PoolVector2Array( 57, -22, 57, -34 )
width = 0.5
default_color = Color( 1, 1, 1, 1 )
antialiased = true

[node name="SpectrumLabel" type="Label" parent="HudGuide"]
self_modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
margin_left = 427.5
margin_top = 654.0
margin_right = 852.5
margin_bottom = 672.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 1 )
text = "Indicator of picked and available colors"
align = 1
uppercase = true
__meta__ = {
"_edit_group_": true
}

[node name="Line2D" type="Line2D" parent="HudGuide/SpectrumLabel"]
modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
position = Vector2( 136, 59 )
points = PoolVector2Array( 76.5, -37, 76.5, -25 )
width = 0.5
default_color = Color( 1, 1, 1, 1 )
antialiased = true

[node name="AstrayLabel" type="Label" parent="HudGuide"]
self_modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
margin_left = 1012.0
margin_top = 654.0
margin_right = 1249.0
margin_bottom = 672.0
grow_horizontal = 0
custom_fonts/font = ExtResource( 1 )
text = "Pixels still astray"
align = 2
uppercase = true
__meta__ = {
"_edit_group_": true
}

[node name="Line2D2" type="Line2D" parent="HudGuide/AstrayLabel"]
modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
position = Vector2( 109, 58 )
points = PoolVector2Array( 104, -24, 104, -36 )
width = 0.5
default_color = Color( 1, 1, 1, 1 )
antialiased = true

[node name="Spectrum" type="TextureRect" parent="HudGuide"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -440.0
margin_top = -25.0
margin_right = 430.0
margin_bottom = -13.0
rect_min_size = Vector2( 0, 12 )
texture = ExtResource( 3 )
expand = true

[node name="ActionHint" parent="." instance=ExtResource( 4 )]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -86.0
margin_top = 628.0
margin_right = 87.0
margin_bottom = 655.0
__meta__ = {
"_edit_vertical_guides_": [ -160.0 ]
}

[node name="Label" parent="ActionHint" index="0"]
margin_top = 4.0
margin_bottom = 22.0

[node name="Jp" parent="ActionHint" index="1"]
margin_bottom = 27.0
texture = SubResource( 347 )

[node name="Label2" parent="ActionHint" index="2"]
margin_top = 4.0
margin_bottom = 22.0

[node name="KEY" parent="ActionHint" index="3"]
margin_top = 4.0
margin_right = 68.0
margin_bottom = 23.0
text = "N"

[node name="Label3" parent="ActionHint" index="4"]
margin_left = 76.0
margin_top = 4.0
margin_right = 238.0
margin_bottom = 22.0
text = "to skip tutorial step"

[editable path="ActionHint"]
